/*
 * Copyright (C) 2021-2021 Huawei Technologies Co., Ltd. All rights reserved.
 */
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.huawei.sermant.plugin.servermonitor.entity";

message AgentRegistration {
  string service = 1;
  string serviceInstance = 2;
  string jvmVersion = 3;
  string jvmVendor = 4;
  string runtimeVersion = 5;
  repeated NetworkAddress networkAddresses = 6;
}

message NetworkAddress {
  string hostname = 1;
  string address = 2;
}